# nautobot-app-golden-config

./: .bandit.yml  .cookiecutter.json  .djlint_rules.yaml  .dockerignore  .flake8  .gitignore  .pydocstyle.ini  .readthedocs.yaml  .travis.yml  .yamllint.yml  CHANGELOG.md  LICENSE  README.md  boostrap_modular.py  dependabot.yml  error_code_template.j2  get_troubleshooting_docs.py  invoke.example.yml  invoke.mysql.yml  lcov.info  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  coverage.yml  prepare_release.yml  rebake.yaml  rebake.yml  release.yml  upstream.yml  upstream_testing.yml
changes/: +dynamic-form.changed  +ltm-release-notes.documentation  +ltm-release-notes.housekeeping  +nautobot-app-v2-4-2.housekeeping  +nautobot-app-v2.4.0.housekeeping  +nautobot-app-v2.4.1.housekeeping  +nautobot-app-v2.5.0.housekeeping  +nautobot-app-v2.5.1.housekeeping  +nautobot-app-v2.6.0.housekeeping  +nautobot-app-v2.7.0.housekeeping  +nautobot-app-v2.7.1.housekeeping  +nautobot-app-v2.7.2.housekeeping  +nautobot-app-v3.0.0.housekeeping  +nautobot-app-v3.1.0.housekeeping  +nautobot-app-v3.1.1.housekeeping  +nautobot-app-v3.1.2.housekeeping  +nautobot-app-v3.1.3.housekeeping  10.20.fixed  1008.fixed  1011.fixed  1012.added  1016.changed  1016.dependencies  1016.fixed  1022.housekeeping  1029.fixed  1030.fixed  1031.fixed  1034.fixed  1035.documentation  1041.fixed  1045.documentation  1050.fixed  1051.fixed  1053.fixed  1055.fixed  1061.fixed  1062.documentation  1064.added  1069.housekeeping  (+106 more)
development/: .nfs0000000000a402e700000002  Dockerfile  app_config_schema.py  creds.example.env  dev.env  dev.example.env  development.env  development_mysql.env  docker-compose.arista.dev.yml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.git.dev.yml  docker-compose.mysql.yml  docker-compose.postgres.yml  docker-compose.redis.yml  docker-compose.yml  nautobot_config.py  towncrier_header.txt  towncrier_template.j2
development/gitserver_image/: Dockerfile  README.md  git_setup.sh
development/napalm_mock_data/: get_config.1  get_facts.1
docs/: FAQ.md  golden-config-settings.md  index.md  installation.md  navigating-backup.md  navigating-compliance-custom.md  navigating-compliance-json.md  navigating-compliance.md  navigating-golden.md  navigating-intended.md  navigating-sot-agg.md  quick-start.md  requirements.txt  upgrade.md
docs/admin/: admin_install.md  admin_release_notes.md  admin_uninstall.md  admin_upgrade.md  compatibility_matrix.md  index.md  install.md  migrating_to_v2.md  uninstall.md  upgrade.md
docs/assets/: extra.css
docs/dev/: arch_decision.md  contributing.md  dev_adr.md  dev_contributing.md  dev_environment.md  dev_extending.md  extending.md  index.md  local_dev_quickstart.md  release_checklist.md
docs/models/: compliancefeature.md
docs/user/: app_external_interactions.md  app_faq.md  app_feature_backup.md  app_feature_compliance.md  app_feature_compliance_hierarchical.md  app_feature_compliancecli.md  app_feature_compliancecustom.md  app_feature_compliancefiltered.md  app_feature_compliancehierarchical.md  app_feature_compliancejson.md  app_feature_compliancexml.md  app_feature_config_plans.md  app_feature_config_postprocessing.md  app_feature_config_to_push.md  app_feature_hash.md  app_feature_intended.md  app_feature_remediation.md  app_feature_sotagg.md  app_getting_started.md  app_overview.md  app_use_cases.md  external_interactions.md  faq.md  index.md
nautobot_golden_config/: __init__.py  app-config-schema.json  banner.py  choices.py  compliance_utils.py  datasources.py  details.py  error_codes.py  exceptions.py  filter_extensions.py  filters.py  forms.py  jinja_filters.py  jobs.py  metrics.py  models.py  navigation.py  routers.py  signals.py  tables.py  template_content.py  urls.py  views.py  viewsets.py
nautobot_golden_config/api/: __init__.py  renderers.py  serializer.py  serializers.py  urls.py  views.py
nautobot_golden_config/changes/: 692.changed
nautobot_golden_config/graphql/: types.py
nautobot_golden_config/migrations/: 0001_initial.py  0002_custom_data.py  0003_auto_20210416_1630.py  0003_auto_20210502_1516.py  0003_auto_20210510_2356.py  0003_goldenconfiglinesettings.py  0004_auto_20210414_1757.py  0004_auto_20210616_2234.py  0005_auto_20210826_1826.py  0005_delete_backupconfiglinereplace.py  0005_json_compliance_rule.py  0006_auto_20210830_1413.py  0006_backupconfiglinereplace.py  0006_multi_repo_support.py  0006_multi_repo_support_temp_field.py  0006_multiple_repo_support.py  0006_temp_field.py  0007_auto_20210416_1540.py  0007_data_retention.py  0007_multi_repo_support_convert_many.py  0008_auto_20211207_1528.py  0008_backup_intended_to_many.py  0008_convert_many.py  0008_multi_repo_support_final.py  0009_data_retention_final.py  0009_multiple_gc_settings.py  0009_multiple_gc_settings_part_1.py  0010_convert_sotagg_queries.py  0010_multi_repo_support_final.py  0010_multiple_gc_settings_part_2.py  0010_multiple_repo_final.py  0011_multiple_gc_settings_part_3.py  0012_multiple_gc_settings_part_4.py  0013_multiple_gc_settings_part_5.py  0014_convert_sotagg_queries_part1.py  0015_convert_sotagg_queries_part2.py  0016_convert_sotagg_queries_part3.py  0017_convert_sotagg_queries_part4.py  0018_convert_sotagg_queries_part5.py  0019_convert_dynamicgroup_part_1.py  (+38 more)
nautobot_golden_config/nornir_plays/: __init__.py  config_backup.py  config_compliance.py  config_deployment.py  config_intended.py  config_provisioning.py  processor.py
nautobot_golden_config/static/: anchor_scroll.js  config_compliance_layout.js  run_job.js  toggle_fields.js
nautobot_golden_config/templatetags/: __init__.py  gc_helpers.py  json_helpers.py
nautobot_golden_config/tests/: __init__.py  conftest.py  fixtures.py  jinja_filters.py  test_api.py  test_api_views.py  test_basic.py  test_basics.py  test_datasources.py  test_filters.py  (+13 more)
scripts/: djlint_b042.py  djlint_b043.py
(+250 files in other folders)
