[tool.poetry]
name = "nautobot-golden-config"
version = "1.6.7"
description = "A plugin for configuration on nautobot"
authors = ["Network to Code, LLC", "<opensource@networktocode.com>"]

license = "Apache-2.0"

readme = "README.md"
homepage = "https://github.com/nautobot/nautobot-plugin-golden-config"
repository = "https://github.com/nautobot/nautobot-plugin-golden-config"
documentation = "https://github.com/nautobot/nautobot-plugin-golden-config"
keywords = ["nautobot", "nautobot-plugin"]
include = [
    "LICENSE",
    "README.md",
]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "nautobot_golden_config" },
]

[tool.poetry.urls]
"Changelog" = "https://docs.nautobot.com/projects/golden-config/en/latest/admin/release_notes/"
"Bug Tracker" = "https://github.com/nautobot/nautobot-plugin-golden-config/issues"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
deepdiff = ">=5.5.0,!=6.0,!=6.1,<8"
django-pivot = "^1.8.1"
matplotlib = "^3.3.2"
nautobot = "^1.6.1"
nautobot-plugin-nornir = "^1.0.1"
netutils = "^1.8.0"
# Already a dependecy of nautobot-plugin-nornir, but adding the required minimum version needed
nornir-nautobot = "^2.6.1"
hier-config = "^2.2.2"
nautobot-capacity-metrics = "^2.0.0"

[tool.poetry.group.dev.dependencies]
bandit = "*"
# Black 23.x.x configuration changes and migration files are taken into account
black = "*"
django-debug-toolbar = "*"
# we need to pin flake8 because of package dependencies that cause it to downgrade and
# therefore cause issues with linting since older versions do not take .flake8 as config
flake8 = "^3.9.2"
invoke = "*"
pydocstyle = "*"
pylint = "*"
pylint-django = "*"
yamllint = "*"
Markdown = "*"
# Rendering docs to HTML
mkdocs = "1.6.0"
# Material for MkDocs theme
mkdocs-material = "9.5.32"
# Render custom markdown for version added/changed/remove notes
markdown-version-annotations = "1.0.1"
# Automatic documentation from sources, for MkDocs
mkdocs-autorefs = "1.2.0"
mkdocstrings = "0.25.2"
mkdocstrings-python = "1.10.8"
griffe = "1.1.1"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.pylint.master]
# Include the pylint_django plugin to avoid spurious warnings about Django patterns
load-plugins="pylint_django"
ignore-patterns=["jinja_filters.py", ".venv"]
ignore-paths = '^.*/migrations/.*$'

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    too-few-public-methods,
    duplicate-code,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pydocstyle]
convention = "google"
inherit = false
match = "(?!__init__).*\\.py"
match-dir = "(?!tests|migrations|development)[^\\.].*"
# D212 is enabled by default in google convention, and complains if we have a docstring like:
# """
# My docstring is on the line after the opening quotes instead of on the same line as them.
# """
# We've discussed and concluded that we consider this to be a valid style choice.
add_ignore = "D212,D417"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "-vv --doctest-modules"
